overhaul html by add div class for left and right content of header, left includes the logo and links, right includes the button and profile image, remove nav element, then on style sheet, remove nav styling and add style to ul element directly, making sure padding and margin were to assignment specifications, add left and right class stylings to make sure elements were centered with correct gap sizing per instructions

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -14,6 +14,7 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 8px;
 }
 
@@ -23,8 +24,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
-  margin: 0;
-  margin-left: 16px;
+  
 }
 
 .logo {
@@ -35,13 +35,11 @@ body {
 }
 
 button {
-  display: flex;
   border: none;
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
-  margin-left: auto;
 }
 
 a {
@@ -50,14 +48,17 @@ a {
   color: rebeccapurple;
 }
 
-nav ul {
+ul {
   list-style-type: none;
   display: flex;
   gap: 16px;
-  padding: 16px;
+  padding: 0;
+  margin: 0;
 }
 
-nav li {
-  margin: 0;
-  padding: 0;
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+
 }
